# middle-rust-blockchain-project-4

./: Cargo.toml  README.md
.github/workflows/: rust.yml
blur_plugin/: Cargo.toml
blur_plugin/src/: lib.rs
image_processor/: Cargo.toml
image_processor/data/: blur_params.json  mirror_params.json
image_processor/src/: lib.rs  main.rs  plugin_loader.rs
mirror_plugin/: Cargo.toml
mirror_plugin/src/: lib.rs
