[workspace]
resolver = "3"
members = ["blur_plugin","image_processor", "mirror_plugin"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"]}
image = { version = "0.25", features = ["png"]}
libloading = { version = "0.9"}

anyhow = { version = "1.0"}

serde = { version = "1.0", features = ["derive"]}
serde_json = { version = "1.0"}

rstest = { version = "0.26"}
